--- a/frontend/signUp.html
+++ b/frontend/signUp.html
@@ -17,19 +17,27 @@
                 <h1>Create Account</h1>
                 <form class="create-account-form" action="#">
                     <div class="input-box">
-                        <input type="text" id="username">
+                        <input type="text" id="username" required>
                         <label for="username">Username</label>
                     </div>
                     <div class="input-box">
-                        <input type="email" id="email">
+                        <input type="email" id="email" required>
                         <label for="email">Email</label>
                     </div>
                     <div class="input-box">
-                        <input type="password" id="password">
+                        <input type="password" id="password" required>
                         <label for="password">Password</label>
                     </div>
-                    <button class="btn-sign-up" type="submit">Sign Up</button>
+                    <button class="btn-sign-up" type="submit">SIGN UP</button>
                 </form>
+                <span class="already">Already have an account? <a class="login" href="login.html">Log In</a></span>
+                <div class="separator">
+                    <span>or</span>
+                </div>
+                <button class="google-btn">
+                    <img src="./img/Google__G__logo.svg" alt="google-icon">
+                    Sign up with Google
+                </button>
             </div>
         </div>
         <div class="img-sign-up"></div>
